--- a/index.ejs
+++ b/index.ejs
@@ -1,27 +1,24 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js"
+      lang="pt-br">
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>IChose - Comanda Digital</title>
-    <meta name="description" content="IChose - Comanda Digital">
-    <meta name="viewport" content="width=device-width">
-
+    <meta http-equiv="X-UA-Compatible"  content="IE=edge,chrome=1">
+    <meta name="description"            content="IChose - Comanda Digital">
+    <meta name="viewport"               content="width=device-width">
+    <meta name="keywords"               content="ichose, provider, baladas, eventos, festas, shows, comanda, digital, danceteria, software, balcão"/>
+    <meta name="author"                 content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
+    
     <link href='http://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
-
-    <link rel="stylesheet" href="css/normalize.css">
-
-    <link rel="stylesheet" href="css/bootstrap.css">
-
-    <link rel="stylesheet" href="css/main.css">
-
-
-
-    <script src="js/vendor/modernizr-2.7.1.js"></script>
+    <link rel="stylesheet"      href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
+    <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
+    <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
+    <link rel="shortcut icon"   href="img/favicon.ico" type="image/x-icon" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+
+    <title>IChose - Comanda Digital</title>
 </head>
 
 <body id="home">
@@ -29,7 +26,7 @@
         <ul>
             <li>
                 <a data-scroll href="#home" target="">
-                    <img src="img/logo_nav.png" />
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_nav.png" />
                 </a>
             </li>
             <li><a data-scroll href="#intro" target="">IChose</a>
@@ -48,9 +45,9 @@
     </nav>
     <header>
         <div>
-            <img src="img/logo_desc.png" />
+            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" />
             <p>LOREM IPSUM DOLOR AMET, CONSECTETUR ADIPISCING ELIT</p>
-            <img src="img/appstore.png" />
+            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/appstore.png" />
         </div>
     </header>
     <section id="intro" class="intro">
@@ -168,10 +165,10 @@
                 </form>
             </li>
             <li class="logo-area">
-                <img src="img/logo_contact.png" />
+                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_contact.png" />
             </li>
             <li class="appstore-area">
-                <img src="img/appstore.png" />
+                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/appstore.png" />
             </li>
         </ul>
     </section>
@@ -179,27 +176,28 @@
     <footer>
         <ul class="footer-area">
             <li>
-                <img src="img/logo_desc_footer.png" />
+                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
             </li>
             <li>
                 <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
-                <span>+55 48 3322 2233</span>
+                <span>+55 48 8822 9472</span>
             </li>
             <li>
                 <a href="#" target="_blank">
-                    <img src="img/facebook.png" />
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
                 </a>
                 <a href="#" target="_blank">
-                    <img src="img/twitter.png" />
+                    <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/twitter.png" />
                 </a>
             </li>
         </ul>
     </footer>
 
     <script src="http://code.jquery.com/jquery-2.1.0.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src='js/lib/smooth-scroll.js'></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/js/main.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src='https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/js/lib/smooth-scroll.js'></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/js/vendor/modernizr-2.7.1.js"></script>
     <script>
     smoothScroll.init({
         speed: 500,
@@ -210,5 +208,6 @@
         callbackAfter: function(toggle, anchor) {}
     });
     </script>
+    
 </body>
 </html>
