--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-ng-app>
+<html lang="pt-br" ng-app="verao2015App">
     <head>
     	<!-- Meta, title, CSS, favicons, etc. -->
     	<!--<meta charset="iso-8859-1"/> -->
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" > 
         <title>iChose - verão 2014/2015</title>
     </head>
-    <body>
+    <body ng-controller="envioemailCtrl">
 		<div class="header-unit">
 			<div id="video-container">
 				<video autoplay 
@@ -52,9 +52,9 @@
 			        <h4>Quer ser exclusivo e descobrir como?</h4>
 		            <form action="" method="post">
 		                <div class="input-group">
-		                    <input type="email" id="user.cdUser" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
+		                    <input type="email" id="user.cdUser" class="form-control" placeholder="digite o seu email aqui" required="" autofocus ng-model="envio.email">
       						<span class="input-group-btn">
-        						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" >Enviar</button>
+        						<button id="btSubmit" class="btn btn-large btn-primary" type="button" disabled="disabled" ng-click="enviar()">Enviar</button>
       						</span>
 		                </div>
                         <br/>
@@ -86,6 +86,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js" ></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/js/verao2015.js"></script>
 
     <!-- Google Universal Analytics 
     ===============================
