--- a/mverao2015.ejs
+++ b/mverao2015.ejs
@@ -14,7 +14,7 @@
         <link rel="stylesheet"  type="text/css" href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/mverao2015.css"> 
         <title>iChose - verão 2014/2015</title>
     </head>
-    <body>
+    <body ng-controller="envioemailCtrl">
     <div id="fullscreen_bg" class="fullscreen_bg"></div>
 		<div class="container-fluid">
 			<div class="row-fluid clearfix">
@@ -33,9 +33,9 @@
 			        	<h4>Quer ser exclusivo e descobrir como?</h4>
 		            <form action="" method="post">
 		                <div class="input-group">
-		                     <input type="email" class="form-control" placeholder="digite o seu email aqui" required="" autofocus>
+		                     <input type="email" class="form-control" placeholder="digite o seu email aqui" required="" autofocus ng-model="envio.email">
       						<span class="input-group-btn">
-        						<button class="btn btn-large btn-primary" type="button">Enviar</button>
+        						<button class="btn btn-large btn-primary" type="button" ng-click="enviar()">Enviar</button>
       						</span>
 		                </div>
 		                <br />
@@ -74,6 +74,7 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/ichose/site/provider/js/validaemail.js"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/js/verao2015.js"></script>
     
     <!-- Google Universal Analytics 
     ===============================
