--- a/css/fundo.css
+++ b/css/fundo.css
@@ -12,18 +12,19 @@
     background-position             : 50% 50%;
     background-repeat               : none;
 	-webkit-backface-visibility     : hidden;
-    -webkit-animation               : imageAnimation 12s linear infinite 0s;
-    -moz-animation                  : imageAnimation 12s linear infinite 0s;
-    -o-animation                    : imageAnimation 12s linear infinite 0s;
-    -ms-animation                   : imageAnimation 12s linear infinite 0s;
-    animation                       : imageAnimation 12s linear infinite 0s;
-    background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG);
+    -webkit-animation               : imageAnimation 30s linear infinite 0s;
+    -moz-animation                  : imageAnimation 30s linear infinite 0s;
+    -o-animation                    : imageAnimation 30s linear infinite 0s;
+    -ms-animation                   : imageAnimation 30s linear infinite 0s;
+    animation                       : imageAnimation 30s linear infinite 0s;
+    /*background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG);
     -webkit-animation-delay         : 6s;
     -moz-animation-delay            : 6s;
     -o-animation-delay              : 6s;
     -ms-animation-delay             : 6s;
     animation-delay                 : 6s;
     background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG);
+    */
 }
 
 /*
