--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -18,6 +18,7 @@
     <body>
         <div class="cb-slideshow">
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
+            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
         
         <footer>
