--- a/css/fundo.css
+++ b/css/fundo.css
@@ -1,4 +1,4 @@
-.cb-slideshow
+.background
 {
     position                        : fixed;
     width                           : 100%;
@@ -17,56 +17,16 @@
     -o-animation                    : imageAnimation 30s linear infinite 0s;
     -ms-animation                   : imageAnimation 30s linear infinite 0s;
     animation                       : imageAnimation 30s linear infinite 0s;
-    /*background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG);
-    -webkit-animation-delay         : 6s;
-    -moz-animation-delay            : 6s;
-    -o-animation-delay              : 6s;
-    -ms-animation-delay             : 6s;
-    animation-delay                 : 6s;
-    background-image                : url(https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG);
-    */
 }
 
-/*
-.cb-slideshow li:nth-child(3) span {
-    background-image        : url(../images/3.jpg);
-    -webkit-animation-delay : 12s;
-    -moz-animation-delay    : 12s;
-    -o-animation-delay      : 12s;
-    -ms-animation-delay     : 12s;
-    animation-delay         : 12s;
-}
-.cb-slideshow li:nth-child(4) span {
-    background-image        : url(../images/4.jpg);
-    -webkit-animation-delay : 18s;
-    -moz-animation-delay    : 18s;
-    -o-animation-delay      : 18s;
-    -ms-animation-delay     : 18s;
-    animation-delay         : 18s;
-}
-.cb-slideshow li:nth-child(5) span {
-    background-image        : url(../images/5.jpg);
-    -webkit-animation-delay : 24s;
-    -moz-animation-delay    : 24s;
-    -o-animation-delay      : 24s;
-    -ms-animation-delay     : 24s;
-    animation-delay         : 24s;
-}
-.cb-slideshow li:nth-child(6) span {
-    background-image        : url(../images/6.jpg);
-    -webkit-animation-delay : 30s;
-    -moz-animation-delay    : 30s;
-    -o-animation-delay      : 30s;
-    -ms-animation-delay     : 30s;
-    animation-delay         : 30s;
-}
-*/
 /* Animation for the slideshow images */
 @-webkit-keyframes imageAnimation { 
     0% {-webkit-transform: scale(1.00);
-	    -webkit-animation-timing-function: linear;}
+	    -webkit-animation-timing-function: linear;
+        opacity: 0.0;}
 	3% {-webkit-transform: scale(1.01);
-	    -webkit-animation-timing-function: linear;}
+	    -webkit-animation-timing-function: linear;
+        opacity: 1;}
 	6% {-webkit-transform: scale(1.02);
 		-webkit-animation-timing-function: linear;}
 	9% {-webkit-transform: scale(1.03);
@@ -132,13 +92,16 @@
 	99% {-webkit-transform: scale(1.33);
 		-webkit-animation-timing-function: linear;}
 	100% {-webkit-transform: scale(1.34);
-		-webkit-animation-timing-function: linear; }
+		-webkit-animation-timing-function: linear; 
+        opacity: 0.0;}
 }
 
 @-moz-keyframes imageAnimation { 
-    0% {-moz-transform: scale(1.00);
+    0% {opacity: 0;
+        -moz-transform: scale(1.00);
 	    -moz-animation-timing-function: linear;}
-	3% {-moz-transform: scale(1.01);
+	3% {opacity: 1;
+        -moz-transform: scale(1.01);
 	    -moz-animation-timing-function: linear;}
 	6% {-moz-transform: scale(1.02);
 		-moz-animation-timing-function: linear;}
@@ -204,13 +167,16 @@
 		-moz-animation-timing-function: linear;}
 	99% {-moz-transform: scale(1.33);
 		-moz-animation-timing-function: linear;}
-	100% {-moz-transform: scale(1.34);
+	100% {opacity: 0;
+        -moz-transform: scale(1.34);
 		-moz-animation-timing-function: linear; }
 }
 @-o-keyframes imageAnimation { 
-    0% {-o-transform: scale(1.00);
+    0% {opacity: 0;
+        -o-transform: scale(1.00);
 	    -o-animation-timing-function: linear;}
-	3% {-o-transform: scale(1.01);
+	3% {opacity: 1;
+        -o-transform: scale(1.01);
 	    -o-animation-timing-function: linear;}
 	6% {-o-transform: scale(1.02);
 		-o-animation-timing-function: linear;}
@@ -276,14 +242,17 @@
 		-o-animation-timing-function: linear;}
 	99% {-o-transform: scale(1.33);
 		-o-animation-timing-function: linear;}
-	100% {-o-transform: scale(1.34);
+	100% {opacity: 0;
+        -o-transform: scale(1.34);
 		-o-animation-timing-function: linear; }
 }
 
 @-ms-keyframes imageAnimation { 
-    0% {-ms-transform: scale(1.00);
+    0% {opacity: 0;
+        -ms-transform: scale(1.00);
 	    -ms-animation-timing-function: linear;}
-	3% {-ms-transform: scale(1.01);
+	3% {opacity: 1;
+        -ms-transform: scale(1.01);
 	    -ms-animation-timing-function: linear;}
 	6% {-ms-transform: scale(1.02);
 		-ms-animation-timing-function: linear;}
@@ -349,14 +318,17 @@
 		-ms-animation-timing-function: linear;}
 	99% {-ms-transform: scale(1.33);
 		-ms-animation-timing-function: linear;}
-	100% {-ms-transform: scale(1.34);
+	100% {opacity: 0;
+        -ms-transform: scale(1.34);
 		-ms-animation-timing-function: linear; }
 }
 
 @keyframes imageAnimation { 
-    0% {transform: scale(1.00);
+    0% {opacity: 0;
+        transform: scale(1.00);
 	    animation-timing-function: linear;}
-	3% {transform: scale(1.01);
+	3% {opacity: 1;
+        transform: scale(1.01);
 	    animation-timing-function: linear;}
 	6% {transform: scale(1.02);
 		animation-timing-function: linear;}
@@ -422,6 +394,7 @@
 		animation-timing-function: linear;}
 	99% {transform: scale(1.33);
 		animation-timing-function: linear;}
-	100% {transform: scale(1.34);
+	100% {opacity: 0;
+        transform: scale(1.34);
 		animation-timing-function: linear; }
 }
