--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -16,9 +16,8 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-        <div class="cb-slideshow">
+        <div class="background">
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
-            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
         
         <footer>
