--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -21,9 +21,15 @@
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
         </div>
         
-        <footer>
+    <footer>
         <ul class="footer-area">
-            <strong>Rede Social</strong>
+            <li>
+                <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
+            </li>
+            <li>
+                <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
+                <span>+55 48 8822 9472</span>
+            </li>
             <li>
                 <a href="https://www.facebook.com/ichoseapp" target="_blank">
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/facebook.png" />
@@ -34,7 +40,7 @@
                 <a href="https://plus.google.com/105051016492501659885" rel="publisher">Google+</a>
             </li>
         </ul>
-        </footer>
+    </footer>
         
 	</body>
 
