--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -18,7 +18,7 @@
     </head>
     <body>
         <div class="background">
-            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro01.JPG">
+            <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
         
         <div class="container-fluid">
@@ -32,13 +32,13 @@
     			</div>
             </div>		 	
 			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column" id="glass">
+			    <div class="col-md-12 column">
 			 		<br>
                     <p class="text-center">
-			             <h1><span class="label label-danger">Aaarrrggggh...</span></h1>
-			             <h1><span class="label label-danger">Você não tem permissão de acesso.</span></h1>
-                         <h1><span class="label label-warning">É a vida...</span></h1> 
-                         <h1><span class="label label-warning">Mas, Fala com o dono da festa.</span></h1>
+			             <h1><span class="label label-danger">E-mail confirmado.</span></h1>
+			             <h1><span class="label label-danger">Mandaremos noticias.</span></h1>
+                         <h1><span class="label label-warning">Enquanto isso nos acompanhem nas redes sociais</span></h1> 
+                         <h1><span class="label label-warning">Pois temos muitas festas para ir.</span></h1>
                          <h1>
                              <a href="mailto:provider@ichose.com.br">
                              <span class="label label-info"> 
