--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -20,33 +20,16 @@
         <div class="background">
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
-        
-        <div class="container-fluid">
-			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column" id="glass">
-    				<br>
-    				<p class="text-center">
-						<img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc.png" class="img-rounded" />
-					</p>
-					<br>
-    			</div>
-            </div>		 	
+        	 	
 			<div class="row-fluid clearfix">
 			    <div class="col-md-12 column">
 			 		<br>
                     <p class="text-center">
 			             <h1><span class="label label-danger">E-mail confirmado.</span></h1>
 			             <h1><span class="label label-danger">Mandaremos noticias.</span></h1>
-                         <h1><span class="label label-warning">Enquanto isso nos acompanhem nas redes sociais</span></h1> 
-                         <h1><span class="label label-warning">Pois temos muitas festas para ir.</span></h1>
-                         <h1>
-                             <a href="mailto:provider@ichose.com.br">
-                             <span class="label label-info"> 
-                             <span class="glyphicon glyphicon-envelope"></span>
-                                provider@ichose.com.br
-                             </span>
-                             </a>
-                         </h1>
+                         <h1><span class="label label-warning">Enquanto isso nos acompanhem</span></h1> 
+                         <h1><span class="label label-warning">nas redes sociais</span></h1>
+                         <h1><span class="label label-info">Pois temos muitas festas para ir.</span></h1>
                     </p>
 		        </div>
             </div>
@@ -57,7 +40,9 @@
                     <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/logo_desc_footer.png" />
                 </li>
                 <li>
-                    <a href="mailto:hello@ichose.com.br" target="_blank">hello@ichose.com.br</a>
+                    <a href="mailto:hello@ichose.com.br" target="_blank">
+                    <span class="label label-info">     
+                    hello@ichose.com.br</a>
                     <span>+55 48 8822 9472</span>
                 </li>
                 <li>
