--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -22,7 +22,7 @@
         </div>
         	 	
 			<div class="row-fluid clearfix">
-			    <div class="col-md-12 column">
+			    <div class="col-md-6 column">
 			 		<br>
                     <p class="text-center">
 			             <h1><span class="label label-danger">E-mail confirmado.</span></h1>
@@ -32,6 +32,9 @@
                          <h1><span class="label label-info">Pois temos muitas festas para ir.</span></h1>
                     </p>
 		        </div>
+                <div class="col-md-6 column">
+                    <iframe src="https://embed.spotify.com/?uri=spotify:user:erebore:playlist:788MOXyTfcUb1tdw4oC7KJ" width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
+                </div>
             </div>
 		</div>    
         <footer>
@@ -41,7 +44,7 @@
                 </li>
                 <li>
                     <a href="mailto:hello@ichose.com.br" target="_blank">
-                    <span class="label label-info">     
+                    <span class="glyphicon glyphicon-envelope"></span>    
                     hello@ichose.com.br</a>
                     <span>+55 48 8822 9472</span>
                 </li>
