--- a/verao2015confirmado.ejs
+++ b/verao2015confirmado.ejs
@@ -17,12 +17,12 @@
         <title>iChose - verão 2014/2015</title>
     </head>
     <body>
-        <div class="background">
+        <div class="background" class="col-me-12 column">
             <img src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/micro02.JPG">
         </div>
         	 	
 			<div class="row-fluid clearfix">
-			    <div class="col-md-6 column">
+			    <div class="col-md-12 column">
 			 		<br>
                     <p class="text-center">
 			             <h1><span class="label label-danger">E-mail confirmado.</span></h1>
@@ -32,9 +32,6 @@
                          <h1><span class="label label-info">Pois temos muitas festas para ir.</span></h1>
                     </p>
 		        </div>
-                <div class="col-md-6 column">
-                    <iframe src="https://embed.spotify.com/?uri=spotify:user:erebore:playlist:788MOXyTfcUb1tdw4oC7KJ" width="250" height="80" frameborder="0" allowtransparency="true"></iframe>
-                </div>
             </div>
 		</div>    
         <footer>
