--- a/verao2015.ejs
+++ b/verao2015.ejs
@@ -10,8 +10,8 @@
     	<meta name="author" content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
         
         <link rel="author"                      href="https://google.com/+FabioLenine"/>
-        <link rel="stylesheet"                  href= "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
-        <link rel="stylesheet"                  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
+        <link rel="stylesheet" type="text/css"  href= "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
+        <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
         <link rel="stylesheet" type="text/css"  href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/verao2015.css" > 
         <title>iChose - verão 2014/2015</title>
     </head>
