--- a/index.ejs
+++ b/index.ejs
@@ -38,7 +38,7 @@
             </li>
             <li><a data-scroll href="#faq" target="">FAQ</a>
             </li>
-            <li><a href="http://ichoseapp.tumblr.com/" target="">Tumblr</a>
+            <li><a href="http://tumblr.ichose.com.br/" target="">Tumblr</a>
             </li>
             <li><a data-scroll href="#contact" target="">Contato</a>
             </li>
