--- a/index.ejs
+++ b/index.ejs
@@ -15,7 +15,7 @@
     <link rel="stylesheet"      href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
-    <link rel="shortcut icon"   href="img/favicon.ico"                                      type="image/x-icon"/>
+    <link rel="shortcut icon"   href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/favicon.ico" type="image/x-icon"/>
 
     <!-- Favicon -->
 
