--- a/index.ejs
+++ b/index.ejs
@@ -11,15 +11,16 @@
     <meta name="author"                 content="Fabio Lenine, Jadson Mezzari, Jesualdo Pinheiro and Lucas Assis."/>
     
     <link rel="author"          href="https://google.com/+FabioLenine"/>
-    <link rel='stylesheet'      href='http://fonts.googleapis.com/css?family=Raleway:100'   type='text/css'>
-    <link rel="stylesheet"      href= "//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >       
+    <link rel='stylesheet'      href="http://fonts.googleapis.com/css?family=Raleway:100"   type='text/css'>
+    <link rel="stylesheet"      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" >
+    <link rel="stylesheet"      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/normalize.min.css" >
     <link rel="stylesheet"      href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/css/main.css">
     <link rel="shortcut icon"   href="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/favicon.ico" type="image/x-icon"/>
 
     <!-- Favicon -->
 
-    <title>IChose - Comanda Digital</title>
+    <title>iChose - Comanda Digital</title>
 </head>
 
 <body id="home">
